# tguppy

./: .gitignore  README.md  pyproject.toml
src/: packet.py  pcapreader.py  sniff.py  tguppy.py
src/protocol/: L2.py  L3.py  L4.py  L7.py  protocol.py
