[tool.poetry]
name = "tguppy"
version = "0.1.0"
description = ""
authors = ["Sp00kyB00k <jelted@hotmail.n;>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^2.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
